# fever

./: Cargo.toml  README.md  build.rs  rustfmt.toml
.github/workflows/: ci.yml
src/: datetime.rs  filesystem.rs  git.rs  haskell.rs  macros.rs  main.rs  rust.rs  template.rs
src/cli/: haskell.rs  mod.rs  rust.rs
src/options/: mod.rs  rust.rs
src/templates/haskell/: .gitignore  Makefile
src/templates/haskell/app/: Main.hs
src/templates/haskell/src/: Lib.hs
src/templates/rust/: Cargo.toml.template  LICENSE-MIT  README.md.template  rustfmt.toml
src/templates/rust/.github/workflows/: ci.yml
src/templates/rust/src/: lib.rs
