[package]
name = "fever"
version = "0.1.4"
edition = "2021"
authors = ["ltoddy <taoliu0509@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "Initialize project using templates."
homepage = "https://github.com/ltoddy/fever"
repository = "https://github.com/ltoddy/fever"
documentation = "https://docs.rs/fever"

[build-dependencies]
manman = "0.1.2"

[dependencies]
anyhow = "1.0"
clap = { version = "3.0", default-features = false, features = ["derive", "std"] }
git2 = "0.13"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
simplelog = "0.11"
tinytemplate = "1.2"

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 1
rpath = false
